--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(TowerDefence)
 
 set(CMAKE_CXX_STANDARD 23)
 
+find_package(SFML 2.5 COMPONENTS graphics audio)
+
 include_directories(src/Table src/Table/CastleData src/Table/TowerData src/Table/EnemyData)
 
 add_executable(TowerDefence main.cpp src/ObjectWithHealth/ObjectWithHealth.h src/ObjectWithHealth/ObjectWithHealth.cpp
@@ -17,9 +19,11 @@ add_executable(TowerDefence main.cpp src/ObjectWithHealth/ObjectWithHealth.h src
         src/Table/CastleData/CastleData.cpp src/Table/TowerData/TowerData.cpp src/Table/EnemyData/EnemyData.cpp
         src/Enemy/EnemyType/EnemyType.h src/Enemy/Hero/Hero.cpp src/Enemy/Hero/AirHero/AirHero.cpp
         src/Enemy/Hero/HeavyHero/HeavyHero.cpp src/Enemy/Hero/LightHero/LightHero.cpp src/Loader/Loader.cpp
-        src/Loader/Loader.h src/Cell/Cell.cpp src/Cell/Cell.h)
+        src/Loader/Loader.h src/Cell/Cell.cpp src/Cell/Cell.h src/Menu/Menu.cpp src/Menu/Menu.h src/GameManager/GameManager.cpp src/GameManager/GameManager.h src/Landscape/Landscape.cpp)
 
 #add_executable(TowerDefence main.cpp src/Table/Table.h src/Table/CastleData/CastleData.h
 #        src/Table/CastleData/CastleData.cpp src/Table/TowerData/TowerData.h src/Table/TowerData/TowerData.cpp
 #        src/Table/EnemyData/EnemyData.h src/Table/EnemyData/EnemyData.cpp src/Loader/Loader.cpp src/Loader/Loader.h
 #        src/Cell/Cell.cpp src/Cell/Cell.h)
+
+target_link_libraries(TowerDefence sfml-graphics sfml-audio)
