light and heavy enemy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,10 @@ add_executable(TowerDefence main.cpp
                             src/Landscape/Landscape.h src/Landscape/Landscape.cpp
 
                             src/GameManager/GameManager.h src/GameManager/GameManager.cpp
-                            src/Menu/Menu.h src/Menu/Menu.cpp)
+                            src/Menu/Menu.h src/Menu/Menu.cpp src/CorrectInput/CorrectInput.h
+                            src/Wall/Wall.h src/Wall/Wall.cpp
+                            src/Enemy/HeavyEnemy/HeavyEnemy.h src/Enemy/HeavyEnemy/HeavyEnemy.cpp
+                            src/Enemy/AirEnemy/AirEnemy.h src/Enemy/AirEnemy/AirEnemy.cpp)
 
 
 #add_executable(TowerDefence main.cpp src/ObjectWithHealth/ObjectWithHealth.h src/ObjectWithHealth/ObjectWithHealth.cpp
